--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "cdk:deploy": "npx cdk deploy"
+    "cdk:deploy": "npx cdk deploy",
+    "create_tables": "ts-node ./scripts/create_tables.ts",
+    "seed_tables": "ts-node ./scripts/seed_tables.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.3",
@@ -50,6 +52,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
@@ -58,6 +61,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "jest": "29.5.0",
+    "knex": "^2.5.0",
+    "pg": "^8.11.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
