--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,10 @@
     "baseUrl": "./",
     "incremental": true,
     "esModuleInterop": true
+  },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
