--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^10.0.3",
     "@vendia/serverless-express": "^4.10.4",
     "aws-cdk-lib": "2.87.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "constructs": "^10.0.0",
     "helmet": "^7.0.0",
     "passport": "^0.6.0",
