fix: add node_modules to the resulting docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,6 @@
+# we never need existing dist and node_modules
+# other files listed here are of no use to
+# the image either
 dist
 cdk.out
 README.md
